--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -24,6 +24,8 @@
                 <div class="nav-tile active"><a href="/gallery">Gallery</a></div>
                 <div class="nav-tile"><a href="/textures">Textures</a></div>
                 <div class="nav-tile"><a href="/worlds">Worlds</a></div>
+                <div class="nav-tile"><a href="/shaders">Shaders</a></div>
+                <div class="nav-tile"><a href="/modpacks">Modpacks</a></div>
             </div>
             <div class="hamburger-menu">
                 <span></span>
@@ -37,6 +39,8 @@
             <div class="nav-tile active"><a href="/gallery">Gallery</a></div>
             <div class="nav-tile"><a href="/textures">Textures</a></div>
             <div class="nav-tile"><a href="/worlds">Worlds</a></div>
+            <div class="nav-tile"><a href="/shaders">Shaders</a></div>
+            <div class="nav-tile"><a href="/modpacks">Modpacks</a></div>
         </div>
     </nav>
 
